fixed overflow rows issue

--- a/assets/_markdown.scss
+++ b/assets/_markdown.scss
@@ -103,8 +103,7 @@
 
   table {
     overflow: auto;
-    width: 100%;
-    // display: block;
+    display: block;
     border-spacing: 0;
     border-collapse: collapse;
     margin-top: $padding-16;
